--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
   "devDependencies": {
     "gh-pages": "^5.0.0"
   },
-  "homepage": "https://elena1983-zinatylina.github.io/mesto-react/"
+  "homepage": "https://elena1983-zinatylina.github.io/react-mesto-auth/"
 }
